--- a/angular.json
+++ b/angular.json
@@ -5,16 +5,16 @@
   "projects": {
     "angular-final": {
       "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
         "build": {
-          "baseHref": "/angular-final/",
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/angular-final/browser",
             "browser": "src/main.ts",
+            "index": "src/index.html",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -25,10 +25,12 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css"
-            ]
+            ],
+            "baseHref": "/angularII-final/"
           },
           "configurations": {
             "production": {
+              "outputHashing": "all",
               "budgets": [
                 {
                   "type": "initial",
@@ -40,13 +42,12 @@
                   "maximumWarning": "4kB",
                   "maximumError": "8kB"
                 }
-              ],
-              "outputHashing": "all"
+              ]
             },
             "development": {
+              "sourceMap": true,
               "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
+              "extractLicenses": false
             }
           },
           "defaultConfiguration": "production"
@@ -76,15 +77,20 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+            "styles": ["src/styles.css"]
+          }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "dir": "dist/angular-final/browser",
+            "baseHref": "/angularII-final/"
           }
         }
       }
     }
   },
   "cli": {
-    "analytics": "9fd76452-e6c2-400f-b904-59212eafeffc"
+    "analytics": false
   }
 }
